# TinyGrad

./: .gitignore  CMakeLists.txt  README.md  example.ipynb  pyproject.toml  setup.py
PythonUsage/: example_digits_mlp.py
docs/: generate_python_api_docs.py  python_api.md
examples/: logreg_csv.c  xor.c  xor_mlp.c
include/: tg.h
python/tinygrad/: __init__.py
python/tinygradc/: core.py
python/tinygradс/: __init__.py
src/: arena.c  autograd.c  data.c  io.c  nn_layers.c  ops_basic.c  ops_loss.c  ops_nn.c  optim.c  tensor.c  tg.c  train_utils.c
tests/: gradcheck.c
