[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tinygradc"
version = "0.1.0"
description = "Small C11 tensor/autograd runtime with a minimal Python wrapper"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "tinygradc" }
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
tinygradc = ["*.so", "*.dylib", "*.dll"]
